--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,17 +37,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     def camerax_version = "1.0.2"
-//    def camerax_version = "1.0.0-alpha23"
+    def camera_view_version = "1.0.0-alpha30"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-//    implementation "androidx.camera:camera-view:1.0.0-alpha14"
-    implementation "androidx.camera:camera-view:1.0.0-alpha23"
+    implementation "androidx.camera:camera-view:$camera_view_version"
 
     // qrcode reader
     implementation 'com.google.zxing:core:3.3.0'
