Add basic overdoklad http client (okhttp3)
Add basic okhttp http client to load receipt data in raw JSON format.
 There is manual ugly implementation to meet resctriction 1 request
 every 5 seconds.

Signed-off-by: Michal Banik <banik.michal.sk@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
 
     // qrcode reader
     implementation 'com.google.zxing:core:3.4.1'
+
+    // REST client
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("com.squareup.okhttp3:okhttp:4.9.2")
 }
